Adds google analytics

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,6 +7,14 @@
   <meta name="theme-color" content="#000000">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link href="https://fonts.googleapis.com/css?family=Libre+Franklin:200,300,400,400i,600,700" rel="stylesheet">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113004877-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-113004877-1');
+  </script>
 
   <title>Tibia Teamhunt</title>
 </head>
